# cryptocom-exchange

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  activate.sh  azure-pipelines.yml  candletest.py  generate.py  generatestructs.py  init.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: cicd.yml  test.yml  test_release.yml
docs/: Makefile
docs/source/: api.rst  conf.py  guide.rst  index.rst
openapi_docs/: README.md  analyze_api.py  api_summary.json  download_api_docs.py  improvements.md
openapi_docs/specs/: private-advanced-amend-order.yaml  private-advanced-cancel-all-orders.yaml  private-advanced-cancel-oco.yaml  private-advanced-cancel-order-list.yaml  private-advanced-cancel-order.yaml  private-advanced-cancel-oto.yaml  private-advanced-cancel-otoco.yaml  private-advanced-create-oco.yaml  private-advanced-create-order-list.yaml  private-advanced-create-order.yaml  private-advanced-create-oto.yaml  private-advanced-create-otoco.yaml  private-advanced-get-open-orders.yaml  private-advanced-get-order-detail.yaml  private-advanced-get-order-history.yaml  private-advanced-get-order-list-detail.yaml  private-amend-order.yaml  private-bot-create-trading-bot-dca.yaml  private-bot-create-trading-bot-funding-arbitrage.yaml  private-bot-create-trading-bot-grid.yaml  private-bot-create-trading-bot-twap.yaml  private-bot-get-trading-bot-executions.yaml  private-bot-get-trading-bots.yaml  private-bot-pause-trading-bot.yaml  private-bot-resume-trading-bot.yaml  private-bot-terminate-trading-bot.yaml  private-bot-update-trading-bot-dca.yaml  private-bot-update-trading-bot-funding-arbitrage.yaml  private-bot-update-trading-bot-grid.yaml  private-bot-update-trading-bot-twap.yaml  private-cancel-all-orders.yaml  private-cancel-order-list.yaml  private-cancel-order.yaml  private-change-account-leverage.yaml  private-change-account-settings.yaml  private-change-isolated-margin-leverage.yaml  private-close-position.yaml  private-create-isolated-margin-transfer.yaml  private-create-order-dma.yaml  private-create-order-list.yaml  (+61 more)
src/cryptocom/exchange/: __init__.py  api.py  base.py  coins.py  enums.py  helpers.py  instruments.py  market.py  networks.py  pairs.py  private.py  rate_limiter.py  structs.py
tests/: conftest.py  test_account.py  test_api.py  test_app.py  test_exchange.py  test_market.py  test_private.py
tests/captured/test_api/: test_api_rate_limits.json
tests/captured/test_market/: test_get_candles.json  test_get_candles[15m-None-None-300-300].json  test_get_candles[15m-None-None-300].json  test_get_candles[15m-None-None-50-50].json  test_get_candles[1D-1780272000-1782864000-30-30].json  test_get_candles[1D-1780272000-1782864000-30-None].json  test_get_candles[1D-1780272000-1782864000-30].json  test_get_candles_all_history_invalid_with_boundaries.json  test_get_candles_count.json  test_get_candles_no_duplicates.json  test_get_candles_start_end_verification.json  test_get_candles_with_time_boundaries.json  test_get_candles_with_time_boundaries[15m-1782252000-1783115999-5].json  test_get_candles_with_time_boundaries[15m-1782259200-1783123199-5].json  test_get_candles_with_time_boundaries[1D-1782597600-1782683999-1].json  test_get_candles_with_time_boundaries[1D-1782604800-1782691199-1].json  test_get_orderbook.json  test_get_pairs.json  test_get_price.json  test_get_risk_parameters.json  test_get_tickers.json  test_get_trades.json  test_get_trades_no_duplicates.json  test_listen_candles.json  test_listen_orderbook.json  test_listen_trades.json  test_trades_match_candles_ohlcv_from_trades.json
tests/captured/test_private/: test_account_get_balance.json  test_account_limit_orders.json  test_account_listen_balances.json  test_account_market_orders.json  test_missing_old_pairs.json  test_no_duplicate_mass_limit_orders.json
