[tool.poetry]
authors = ["Morty Space <morty.space@gmail.com>"]
description = "Python 3.7+ async library for crypto.com/exchange API using httpx and websockets"
license = "MIT"
name = "cryptocom-exchange"
packages = [
  {include = "cryptocom", from = "src"},
]
version = "0.11.6"
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
aiolimiter = "^1.0.0"
async-timeout = "^4.0.2"
cached-property = "^1.5.2"
httpx = "^0.22.0"
python = "^3.7"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
flake8 = "3.9"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-doctestplus = "^0.12.0"
pre-commit = "^2.18.1"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
mypy = "^0.950"
importlib-metadata = "^4.11.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \build
  | \dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
parser_angular_allowed_types="build,chore,ci,docs,feat,fix,perf,style,refactor,test,sync"
parser_angular_minor_types = "feat"
parser_angular_patch_types = "fix,perf,sync"
commit_message = ""
changelog_sections="feature,fix,sync,perf,breaking,documentation,performance,:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,Other"
