[tool.poetry]
authors = ["Morty Space <morty.space@gmail.com>"]
description = "Python 3.11+ async library for crypto.com/exchange API using httpx and websockets"
license = "MIT"
name = "cryptocom-exchange"
packages = [
  {include = "cryptocom", from = "src"},
]
version = "0.15.0"
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
aiolimiter = "^1.2.1"
async-timeout = "^5.0.1"
cached-property = "^2.0.1"
httpx = "^0.28.1"
python = "^3.11"
websockets = "^15.0.1"
pyyaml = "^6.0.2"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py311"
unsafe-fixes = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.semantic_release]
version_toml = [
  "pyproject.toml:tool.poetry.version",
]
branch = "main"
parser_angular_allowed_types="build,chore,ci,docs,feat,fix,perf,style,refactor,test,sync"
parser_angular_minor_types = "feat"
parser_angular_patch_types = "fix,perf,sync"
changelog_sections="feature,fix,sync,perf,breaking,documentation,performance,:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,Other"

[dependency-groups]
dev = [
    "ruff>=0.15.20,<0.16.0",
    "flake8>=7.3.0,<8.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-doctestplus>=1.4.0,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "Sphinx>=8.2.3,<9.0.0",
    "sphinx-rtd-theme>=3.0.2,<4.0.0",
    "mypy>=1.17.1,<2.0.0",
    "importlib-metadata>=8.7.0,<9.0.0",
]
